--- a/FreeCodeCamp/updateheightdynamically.css
+++ b/FreeCodeCamp/updateheightdynamically.css
@@ -1,6 +1,6 @@
 .bar {
-  width: 25px;
-  height: 100px;
+  width: 1.5625rem;
+  height: 6.25rem;
   display: inline-block;
   background-color: blue;
 }
