--- a/Samples/styles.css
+++ b/Samples/styles.css
@@ -4,3 +4,22 @@
   box-sizing: border-box;
   margin: 0;
 }
+
+body {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 0.75rem;
+  color: #333;
+  width: 200vw;
+}
+
+.bars rect {
+  fill: steelblue;
+}
+
+.bars rect:hover {
+  fill: orange;
+}
+
+.labels text {
+  text-anchor: end;
+}
