--- a/Samples/styles.css
+++ b/Samples/styles.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   color: #333;
   width: 200vw;
 }
@@ -22,4 +22,19 @@ body {
 
 .labels text {
   text-anchor: end;
+}
+
+.content {
+  display: flex;
+  height: 2.5rem;
+}
+
+.content div {
+  /*  position: absolute; */
+  margin: 0.125rem;
+  background-color: orange;
+  color: white;
+  width: 0.875rem;
+  height: 0.875rem;
+  text-align: center;
 }
